--- a/udemyPyProFilesMaster/App-8-Instant-Dictionary-Webapp/requirements.txt
+++ b/udemyPyProFilesMaster/App-8-Instant-Dictionary-Webapp/requirements.txt
@@ -12,8 +12,8 @@ itsdangerous==1.1.0
 Jinja2==2.11.2
 justpy==0.1.5
 MarkupSafe==1.1.1
-numpy==1.19.4
-pandas==1.2.0
+numpy
+pandas
 python-dateutil==2.8.1
 pytz==2020.5
 requests==2.25.1
